--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -35,15 +35,12 @@
                       <div class="row ms-0 pb-1 align-items-center">
                         <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                           class="badge bg-info rounded-pill col-auto me-2 px-1">{{post.jssCategories[0].name}}</a>
-                        <a *ngIf="true"
-                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"
-                          (click)="followPost(post, $event)">
-                          <i class="bi-bookmark"></i>
-                        </a>
-                        <a *ngIf="false"
-                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"
-                          (click)="followPost(post, $event)">
-                          <i class="bi-bookmark-fill"></i>
+                        <a class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                          (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)">
+                          <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                          </i>
                         </a>
                       </div>
                       <h6 class="mb-0 ">
@@ -69,15 +66,12 @@
                     <div class="row pb-1 ms-0 align-items-center">
                       <a (click)="openCategoryPosts(lastPosts[0].jssCategories[0], $event)"
                         class="badge bg-info rounded-pill col-auto me-2 px-1">{{lastPosts[0].jssCategories[0].name}}</a>
-                      <a *ngIf="true"
-                        class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"
-                        (click)="unfollowPost(lastPosts[0], $event)">
-                        <i class="bi-bookmark-fill"></i>
-                      </a>
-                      <a *ngIf="false"
-                        class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"
-                        (click)="followPost(lastPosts[0], $event)">
-                        <i class="bi-bookmark"></i>
+                      <a class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                        (click)="lastPosts[0].isBookmarked ? unBookmarkPost(lastPosts[0]) : bookmarkPost(lastPosts[0])">
+                        <i [ngClass]="{'bi-bookmark': !lastPosts[0].isBookmarked,
+                                'bi-bookmark-fill text-dark': lastPosts[0].isBookmarked,
+                                'text-transparent': !lastPosts[0].isBookmarked}">
+                        </i>
                       </a>
                     </div>
                     <h2>
@@ -122,15 +116,12 @@
                       <div class="row align-items-center ms-0 mb-1">
                         <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                           class="badge bg-info rounded-pill px-1 col-auto me-2 mb-0">{{post.jssCategories[0].name}}</a>
-                        <a *ngIf="false"
-                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center col-auto"
-                          (click)="unfollowPost(post, $event)">
-                          <i class="bi-bookmark-fill"></i>
-                        </a>
-                        <a *ngIf="true"
-                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center col-auto"
-                          (click)="followPost(post, $event)">
-                          <i class="bi-bookmark"></i>
+                        <a class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                          (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)">
+                          <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                          </i>
                         </a>
                       </div>
                       <h4>
@@ -585,16 +576,7 @@
                 </div>
                 <div class="card-body">
                   <div class="row pb-1 align-items-center m-0">
-                    <a *ngIf="true"
-                      class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"
-                      (click)="unfollowSerie(series[0], $event)">
-                      <i class="bi-bookmark-fill"></i>
-                    </a>
-                    <a *ngIf="false"
-                      class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"
-                      (click)="followSerie(series[0], $event)">
-                      <i class="bi-bookmark"></i>
-                    </a>
+
                   </div>
                   <h2><a class="card-title-truncate" (click)="openSeriePosts(series[0], $event)">
                       {{series[0].titleText}}</a>
@@ -644,7 +626,7 @@
     <div class="row p-0" *ngIf="!pinnedPosts ||  pinnedPosts.length>0">
       <div class="col-md-12">
         <div class="section-title-block d-flex pb-3">
-          <h3 class="section-widget-title">La selection de la rédaction</h3>
+          <h3 class="section-widget-title">La sélection de la rédaction</h3>
         </div>
       </div>
       <div *ngIf="!pinnedPosts" class="pb-3">
@@ -670,8 +652,13 @@
               <div class="row pb-1 px-2 align-items-center">
                 <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                   class="badge bg-info rounded-pill px-1 col-auto me-2">{{post.jssCategories[0].name}}</a>
-                <a class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center"><i
-                    class="bi-bookmark"></i></a>
+                <a class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                  (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)">
+                  <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                  </i>
+                </a>
               </div>
               <h4>
                 <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium" class="pe-0"
