adding podcast mechanic for home page

--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -226,7 +226,7 @@
           </div>
 
           <!-- Podcast -->
-          <div class="border border-light card p-3 mb-3">
+          <div *ngIf="podcasts[0]" class="border border-light card p-3 mb-3">
             <div class="wrapper">
               <div class="row">
                 <div class="col-md-12">
@@ -254,7 +254,7 @@
 
                     <div class="col p-0">
                       <h6 class="card-truncate-1-line mb-0 flex-grow-1 text-light fs-7">
-                        Episode 1 : « L'avocat commis d'office est inexpérimenté »
+                        {{podcasts[0].titleText}}
                       </h6>
                       <p class="mb-0 text-light fs-8">Raide comme la Justice</p>
                     </div>
@@ -262,8 +262,11 @@
 
                   <!-- Line 2 : button + date -->
                   <div class="d-flex align-items-center">
-                    <a class="btn-light btn-sm rounded-circle btn-circle fs-7"><i class=" bi-play-fill"></i></a>
-                    <span class="small text-light fs-9 ms-2">Publié le 03/03/2025 à 10:42</span>
+                    <a class="btn-light btn-sm rounded-circle btn-circle fs-7"
+                      (click)="togglePlayPodcast(podcasts[0])"><i
+                        [ngClass]="isPlayingPodcast(podcasts[0]) ? 'bi-pause-fill' : 'bi-play-fill'"></i></a>
+                    <span class="small text-light fs-9 ms-2">Publié le {{podcasts[0].date | date: 'dd/MM/yyyy'}} à
+                      {{podcasts[0].date | date: 'HH:mm'}}</span>
                   </div>
 
                 </div>
@@ -549,7 +552,8 @@
                 <div class="card-body d-flex flex-column align-items-center text-center justify-content-between">
                   <h6 class="text-uppercase fs-8">Podcast</h6>
                   <h4><a>{{podcast.titleText}}</a></h4>
-                  <a class="btn btn-outline-dark my-3 px-5" href="#"><i class="bi-play-fill me-1"></i>
+                  <a class="btn btn-outline-dark my-3 px-5" (click)="togglePlayPodcast(podcast)"><i
+                      [ngClass]="isPlayingPodcast(podcast) ? 'bi-pause-fill' : 'bi-play-fill'"></i>
                     Écouter</a>
                 </div>
               </div>
