--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -49,8 +49,8 @@
             <div class="col-auto mt-0">
               <!-- Share dropdown -->
               <div class="dropdown nav" [ngClass]="{ show: dropdownOpen }">
-                <a href="#" role="button" class="d-flex align-items-center p-0 user-account dropdown-toggle"
-                  (click)="toggleDropdown($event)" [attr.aria-expanded]="dropdownOpen">
+                <a role="button" class="d-flex align-items-center p-0 user-account" (click)="toggleDropdown($event)"
+                  [attr.aria-expanded]="dropdownOpen">
 
                   <div class="d-none d-md-block">
                     <div class="btn btn-primary"><i class="bi bi-share me-2"></i>Partager</div>
