--- a/src/main/resources/mails/templates/quotation-page.html
+++ b/src/main/resources/mails/templates/quotation-page.html
@@ -362,8 +362,8 @@
                     préciser lors de la commande.</p>
                 <p>
                     Le prix de la publication d’une annonce légale est fixé par décret ministériel annuellement
-                    selon soit un prix forfaitaire par type de forme pour les constitutions et pour les radiations
-                    de sociétés, soit au nombre de caractères publiées de filet à filet. Les prix appliqués sont
+                    selon soit un prix forfaitaire par type de forme et d’évènement, soit au nombre de caractères
+                    publiées de filet à filet. Les prix appliqués sont
                     ceux fixés au jour de la parution de l’annonce.</p>
                 <p>
                     La formalité est facturée sur la base des tarifs JSS en vigueur et mis à jour chaque année et
@@ -374,7 +374,9 @@
                     un délai de 30 jours, conformément à l’article L.441-10 C.Com.
                     Suivant l’importance ou la nature du travail à exécuter (dissolution/liquidation) un acompte
                     sera réclamé au moment de la commande. Cet acompte sera déduit de la facture. Un solde créditeur
-                    sera alors remboursé ou un solde débiteur sera à régler dans un délai de 30 jours.</p>
+                    sera alors remboursé par virement ou un solde débiteur sera à régler dans un délai de 30 jours. Les
+                    chèques ne
+                    sont plus admis.</p>
                 <p>
                     Tout règlement par virement ou CB depuis l’étranger générant des frais bancaires à notre
                     encontre, entraînera une facturation complémentaire pour frais d’encaissement.</p>
