--- a/client-jss/src/app/main/components/post-author-header/post-author-header.component.html
+++ b/client-jss/src/app/main/components/post-author-header/post-author-header.component.html
@@ -7,7 +7,7 @@
             <div class="col-12 ">
               <div class="d-flex align-items-center gap-3 flex-wrap">
                 <h3 class="section-widget-title m-0">{{selectedAuthor.name}}</h3>
-                <button type="button" class="btn btn-outline-dark"
+                <button type="button" class="btn btn-outline-dark" *ngIf="currentUser"
                   (click)="isFollowed ? unfollowAuthor() : followAuthor()"> <i class="bi"
                     [ngClass]="isFollowed ? 'bi-dash-lg' : 'bi-plus-lg'"></i>
                   {{ isFollowed ? 'Ne plus suivre' : 'Suivre' }}</button>
