--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -35,7 +35,8 @@
                       <div class="row ms-0 pb-1 align-items-center">
                         <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                           class="badge bg-info rounded-pill col-auto me-2 px-1">{{post.jssCategories[0].name}}</a>
-                        <a class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                        <a *ngIf="currentUser"
+                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
                           (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)">
                           <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
                                 'bi-bookmark-fill text-dark': post.isBookmarked,
@@ -66,7 +67,8 @@
                     <div class="row pb-1 ms-0 align-items-center">
                       <a (click)="openCategoryPosts(lastPosts[0].jssCategories[0], $event)"
                         class="badge bg-info rounded-pill col-auto me-2 px-1">{{lastPosts[0].jssCategories[0].name}}</a>
-                      <a class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                      <a *ngIf="currentUser"
+                        class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
                         (click)="lastPosts[0].isBookmarked ? unBookmarkPost(lastPosts[0]) : bookmarkPost(lastPosts[0])">
                         <i [ngClass]="{'bi-bookmark': !lastPosts[0].isBookmarked,
                                 'bi-bookmark-fill text-dark': lastPosts[0].isBookmarked,
@@ -116,7 +118,8 @@
                       <div class="row align-items-center ms-0 mb-1">
                         <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                           class="badge bg-info rounded-pill px-1 col-auto me-2 mb-0">{{post.jssCategories[0].name}}</a>
-                        <a class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                        <a *ngIf="currentUser"
+                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
                           (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)">
                           <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
                                 'bi-bookmark-fill text-dark': post.isBookmarked,
