First version of give posts feature

--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -41,7 +41,8 @@
           <!-- Boutons offrir article, enrregistrer, partager  -->
           <div class="row inline-row align-items-center mb-2 g-2">
             <div class="col-auto mt-0">
-              <a class="btn btn-primary"><i class="bi bi-gift me-2"></i>Offrir cet article</a>
+              <button class="btn btn-primary" (click)="openOfferPostModal(givePostModal)" [disabled]="!currentUser"><i
+                  class="bi bi-gift me-2"></i>Offrir cet article</button>
             </div>
             <div class="col-auto mt-0">
               <a class="btn btn-primary"><i class="bi bi-bookmark me-2"></i>Enregistrer</a>
@@ -455,3 +456,37 @@
     <newsletter></newsletter>
   </div>
 </div>
+
+<ng-template #givePostModal let-modal>
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title">Offrir cet article</h5>
+      <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss()"></button>
+    </div>
+    <div class="modal-body">
+      <form [formGroup]="giftForm" (ngSubmit)="givePost(modal, post!)">
+        <div class="mb-3">
+          <form class="subscription-from needs-validation" novalidate>
+            <div class="input-group">
+              <generic-input [(model)]="recipientMail"
+                label="Adresse e-mail de la personne à qui vous voulez offrir cet article" [form]="giftForm"
+                class="white-form-control" propertyName="propertyName" [isMandatory]="true" [isDisabled]="false"
+                type="email"></generic-input>
+            </div>
+          </form>
+        </div>
+        <p class="small text-muted" *ngIf="currentUser!.numberOfPostsSharingAuthorized">
+          Nombre d'articles que vous pouvez encore partager ce mois-ci : <strong>
+            {{ currentUser!.numberOfPostsSharingAuthorized }}</strong>
+        </p>
+        <p class="small text-muted" *ngIf="!currentUser!.numberOfPostsSharingAuthorized">
+          Il ne vous reste plus d'article à partager pour ce mois-ci ! Vous retrouverez votre crédit le mois prochain.
+        </p>
+        <div class="text-end">
+          <button type="submit" class="btn btn-secondary"
+            [disabled]="giftForm.invalid && currentUser!.numberOfPostsSharingAuthorized <= 0">Envoyer</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</ng-template>
