--- a/client-myjss/src/app/modules/tools/components/tools/tools.component.html
+++ b/client-myjss/src/app/modules/tools/components/tools/tools.component.html
@@ -9,7 +9,7 @@
     </ol>
   </nav>
 
-  <ul class="nav nav-tabs " role="tablist">
+  <ul class="nav nav-tabs d-flex flex-column flex-sm-row" role="tablist">
     <li class="nav-item" *ngFor="let item of toolsItems;">
       <a class="nav-link" [class.active]="item == selectedTab" [routerLink]="item.route">
         <i class="fi-home me-2 "></i>
