--- a/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
+++ b/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
@@ -35,7 +35,7 @@
         <kanban-invoicing></kanban-invoicing>
       </ng-template>
     </mat-tab>
-    <mat-tab label="Solde bancaire">
+    <mat-tab label="Solde bancaire" *ngIf="canViewBankBalance()">
       <ng-template matTabContent>
         <bank-balance></bank-balance>
       </ng-template>
