fix label contribute page and route link for footer

--- a/client-jss/src/app/main/components/contribute/contribute.component.html
+++ b/client-jss/src/app/main/components/contribute/contribute.component.html
@@ -16,14 +16,15 @@
               <h3>Mettez votre plume au service de l’info !</h3>
               <img class="rounded-2 mb-2" src="/assets/images/page_contribuer.jpg">
               <h4>Partagez votre regard sur l'actualité</h4>
-              <p>Vous avez une analyse ou une opinion à partager en lien avec l’actualité ? Sur le jss.fr, l’information
-                se construit avec vous ! Que vous soyez journaliste indépendant ou spécialiste d’un sujet qui pourrait
-                intéresser les lecteurs de notre média, nous vous offrons un espace pour exprimer vos idées et enrichir
-                le débat public.</p>
+              <p>Vous avez une analyse ou une opinion à partager en lien avec l’actualité ?
+                Au JSS, l’information se construit avec vous ! Que vous soyez journaliste indépendant ou spécialiste
+                d’un sujet qui pourrait intéresser les lecteurs de notre média, nous vous offrons un espace pour
+                exprimer vos idées et enrichir le débat public.</p>
               <h4>Notre ligne éditoriale</h4>
-              <p>Le JSS, c'est un média engagé dans une information libre, rigoureuse et diversifiée. Notre mission :
-                donner la parole à des voix variées pour décrypter l’actualité autrement. Nous privilégions une approche
-                analytique et approfondie, loin des formats courts et sensationnalistes.</p>
+              <p>Le JSS, c'est un média engagé dans une information libre, rigoureuse et diversifiée.
+                Notre mission : donner la parole à des voix variées pour décrypter l’actualité autrement.
+                Nous privilégions une approche analytique et approfondie, loin des formats courts et sensationnalistes.
+              </p>
 
               <h4>Pourquoi contribuer ? </h4>
               <blockquote class="ms-0 pb-2 pt-1">
@@ -33,7 +34,7 @@
                     spécialisé.
                   </li>
                   <li>
-                    <strong>Affirmez votre expertise :</strong> faites reconnaître votre plume et vos
+                    <strong>Affirmez votre expertise :</strong> Faites reconnaître votre plume et vos
                     décryptages.
                   </li>
                 </ul>
