--- a/client-jss/src/app/main/components/footer/footer.component.html
+++ b/client-jss/src/app/main/components/footer/footer.component.html
@@ -40,9 +40,9 @@ Footer START -->
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
                     (click)="openPodcastPosts($event)">Podcasts</a></li>
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
-                    (click)="openInterviewPosts($event)">Interviews</a></li>
-                <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
                     (click)="openSeriesPosts($event)">Series et dossiers</a></li>
+                <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
+                    (click)="openContributePage($event)">Contribuer</a></li>
               </ul>
             </div>
           </div>
