--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -634,7 +634,7 @@
           communauté de rédacteurs.</p>
       </div>
       <div class="row">
-        <a class="btn btn-light-blue my-3 px-5" href="#">Devenir contributeur</a>
+        <a class="btn btn-light-blue my-3 px-5" routerLink="/contribute">Devenir contributeur</a>
       </div>
     </div>
 
