--- a/client-myjss/src/app/modules/my-account/components/bookmarks/bookmarks.component.html
+++ b/client-myjss/src/app/modules/my-account/components/bookmarks/bookmarks.component.html
@@ -25,12 +25,11 @@
                         <span class="fs-sm text-body-secondary mt-2">Publié le {{post.date | date:'EEEE d MMMM'}}</span>
                         <span class="fs-xs opacity-20 mt-2 mx-3">|</span>
                         <a *ngFor="let tag of post.postTags" (click)="openTagPosts(tag, $event)"
-                          class="badge text-nav fs-xs border mt-2">{{tag.slug}}</a>
-                        <a class="cursor-pointer rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                          class="badge text-nav fs-xs border mt-2 me-2">{{tag.slug}}</a>
+                        <a class="cursor-pointer rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2  "
                           (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)">
                           <i [ngClass]="{'ai-bookmark': !post.isBookmarked,
-                                'ai-bookmark-fill': post.isBookmarked,
-                                'text-transparent': !post.isBookmarked}">
+                                'ai-bookmark-minus': post.isBookmarked }">
                           </i>
                         </a>
                       </div>
