--- a/client-jss/src/app/main/components/footer/footer.component.html
+++ b/client-jss/src/app/main/components/footer/footer.component.html
@@ -43,7 +43,8 @@ Footer START -->
                     (click)="openSeriesPosts($event)">Series et dossiers</a></li>
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
                     (click)="openContributePage($event)">Contribuer</a></li>
-                <li>(click)="openKiosk($event)">Kiosque</a></li>
+                <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
+                    (click)="openKiosk($event)">Kiosque</a></li>
               </ul>
             </div>
           </div>
