--- a/client-jss/src/app/main/components/header/header.component.css
+++ b/client-jss/src/app/main/components/header/header.component.css
@@ -39,3 +39,7 @@
 .header-navbar-bottom .navbar-nav>li:first-child>a {
   padding-left: 1rem !important;
 }
+
+.dropdown-header {
+  color: var(--ar-secondary) !important;
+}
